*SVN*

* Added Base#toggle(attribute) and Base#toggle!(attribute) that makes it easier to flip a switch or flag.

    Before: topic.update_attribute(:approved, !approved?)
    After : topic.toggle!(:approved)

* Added Base#increment!(attribute) and Base#decrement!(attribute) that also saves the records. Example:

    page.views # => 1
    page.increment!(:views) # executes an UPDATE statement
    page.views # => 2
    
    page.increment(:views).increment!(:views)
    page.views # => 4

* Added Base#increment(attribute) and Base#decrement(attribute) that encapsulates the += 1 and -= 1 patterns.


*1.4.0* (January 4th, 2005)

* Added automated optimistic locking if the field <tt>lock_version</tt> is present.  Each update to the
  record increments the lock_version column and the locking facilities ensure that records instantiated twice
  will let the last one saved raise a StaleObjectError if the first was also updated. Example:
  
    p1 = Person.find(1)
    p2 = Person.find(1)
    
    p1.first_name = "Michael"
    p1.save
    
    p2.first_name = "should fail"
    p2.save # Raises a ActiveRecord::StaleObjectError
  
  You're then responsible for dealing with the conflict by rescuing the exception and either rolling back, merging,
  or otherwise apply the business logic needed to resolve the conflict.

  #384 [Michael Koziarski]

* Added dynamic attribute-based finders as a cleaner way of getting objects by simple queries without turning to SQL. 
  They work by appending the name of an attribute to <tt>find_by_</tt>, so you get finders like <tt>Person.find_by_user_name,
  Payment.find_by_transaction_id</tt>. So instead of writing <tt>Person.find_first(["user_name = ?", user_name])</tt>, you just do
  <tt>Person.find_by_user_name(user_name)</tt>.
  
  It's also possible to use multiple attributes in the same find by separating them with "_and_", so you get finders like